# modbots

./: .dockerignore  .editorconfig  .env.example  .gitignore  LICENSE  LICENSE.md  README.md  docker-compose.yml  package-lock.json  package.json
apps/chat-bot-runtime/: Dockerfile  package.json  tsconfig.json
apps/chat-bot-runtime/src/: config.ts  engine.ts  index.ts  mind.ts  personas.ts  platform.ts
services/ml/: Dockerfile  pyproject.toml
services/ml/app/: main.py
